--- a/assets/css/AdminDashboard.css
+++ b/assets/css/AdminDashboard.css
@@ -41,6 +41,10 @@
     color:white;
 }
 
+.main .content .header .header-content .current-content-smaller{
+    display: none;
+}
+
 .main .content .header .header-content .menu-content{
     display: flex;
     align-items: center;
@@ -87,7 +91,11 @@
     right:-10px;
 }
 
-.main .content .header .header-content .admin{
+.main .content .header .header-content .information {
+    position: relative;
+}
+
+.main .content .header .header-content .information .admin{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -95,16 +103,16 @@
     background-color: #F9FAFD;
 }
 
-.main .content .header .header-content .admin.dark{
+.main .content .header .header-content .information .admin.dark{
     background-color: #3C4655;
     transition: 0.2s all ease;
 }
 
-.main .content .header .header-content .admin:hover {
+.main .content .header .header-content .information .admin:hover {
     cursor: pointer;
 }
 
-.main .content .header .header-content .admin .image{
+.main .content .header .header-content .information .admin .image{
     display: flex;
     justify-content: center;
     border-radius: 100%;
@@ -112,32 +120,32 @@
     height:30px;
 }
 
-.main .content .header .header-content .admin .image img{
+.main .content .header .header-content .information .admin .image img{
     object-fit: cover;
     height:30px;
     width:30px;
     border-radius: 100%;
 }
 
-.main .content .header .header-content .admin .admin-info {
+.main .content .header .header-content .information .admin .admin-info {
     margin-left:12px;
 }
 
-.main .content .header .header-content .admin .admin-info .admin-name{
+.main .content .header .header-content .information .admin .admin-info .admin-name{
     font-weight: 500;
     color:#90979E;
 }
 
-.main .content .header .header-content .admin .admin-info .role{
+.main .content .header .header-content .information .admin .admin-info .role{
     font-size: 13px;
     color:#90979E;
 }
 
-.main .content .header .header-content .admin .admin-info .active{
+.main .content .header .header-content .information .admin .admin-info .active{
     color:#7A83F5;
 }
 
-.main .content .header .header-content .admin .icon-down i {
+.main .content .header .header-content .information .admin .icon-down i {
     font-size: 17px;
 }
 
@@ -145,33 +153,32 @@
 
 
 /* Admin Menu Info */
-.main .content .header .admin-menu {
+.main .content .header .information .admin-menu {
     background-color: #FFFFFF;
     border: 1px #90979E solid;
     border-radius: 5px;
-    width:14%;
+    width:100%;
     color: #90979E;
     position: absolute;
-    right:20px;
     display: none;
 }
 
-.main .content .header .admin-menu.show{
+.main .content .header .information .admin-menu.show{
     display: block;
 }
 
-.main .content .header .admin-menu.dark{
+.main .content .header .information .admin-menu.dark{
     background-color: #37404A;
     border-color: #464F5B;
 }
 
-.main .content .header .admin-menu .menu-desc {
+.main .content .header .information .admin-menu .menu-desc {
     font-size: 12px;
     font-weight: 500;
     padding:8px 18px;
 }
 
-.main .content .header .admin-menu .menu-info ul {
+.main .content .header .information .admin-menu .menu-info ul {
     list-style-type: none;
     padding:0;
     margin:0;
@@ -180,23 +187,23 @@
     flex-direction: column;
 }
 
-.main .content .header .admin-menu .menu-info ul li .menu-item {
+.main .content .header .information .admin-menu .menu-info ul li .menu-item {
     display: flex;
     align-items: center;
     padding:6px 24px;
 }
 
-.main .content .header .admin-menu .menu-info ul li .menu-item:hover{
+.main .content .header .information .admin-menu .menu-info ul li .menu-item:hover{
     background-color: #F9FAFD;
     cursor: pointer;
 }
 
-.main .content .header .admin-menu .menu-info ul li .menu-item.dark:hover{
+.main .content .header .information .admin-menu .menu-info ul li .menu-item.dark:hover{
     color: white;
     background-color: #90979E;
 }
 
-.main .content .header .admin-menu .menu-info ul li .menu-item .text{
+.main .content .header .information .admin-menu .menu-info ul li .menu-item .text{
     margin-left:12px;
 }
 /* End Admin Menu Info */
@@ -233,7 +240,7 @@
     display: flex;
     align-items: center;
     padding: 20px 0;
-    padding-left:10%;
+    padding-left:15%;
     color:#8391a2;
 }
 
@@ -244,7 +251,7 @@
 }
 
 .main .sider .menu ul li .menu-item .text {
-    font-size: 17px;
+    font-size: 15px;
     margin-left:15px;
 }
 
@@ -257,52 +264,162 @@
     color:#8391a2;
 }
 /* End Sider */
-
-/* Sub Sider */
-.main .subsider{
-    background-color: #313A46; 
-    padding-right:0;
-}
-
-.main .subsider .logo {
-    display: flex;
-    justify-content: center;
-    padding:20px 0;
-}
-
-.main .subsider .menu ul{
-    list-style-type: none;
-    position: relative;
-    padding:0;
-    margin: 0;
-}
-
-.main .subsider .menu ul li {
-    display: flex;
-    justify-content: center;
-}
-
-.main .subsider .menu ul li .menu-item{
-    padding: 20px 0;
-    color:#8391a2;
-}
-
-.main .subsider .menu ul li .menu-item .icon-sider i{
-    font-size: 16px;
-    text-align: center;
-}
-
-.main .subsider .menu ul li .menu-item-hover{
-    display: flex;
-    align-items: center;
-    padding: 20px;
-    color:#F9FAFD;
-    background-color: #7A83F5;
-    position: absolute;
-    left:0;
-    top:20%;
-}
-
-
-/* End Sub Sider */
 /* End Admin Dashboard */
+
+/* Responsive */
+@media all and (max-width:1286px){
+    .main .sider .menu ul li .menu-item {
+        padding-left:7%;
+    }
+    .main .content .header .admin-menu {
+        width:16.8%;
+    }
+}
+@media all and (max-width:1199.98px){
+    .main .sider .menu ul li .menu-item {
+        padding-left:13%;
+    }
+    .main .left {
+        width:23%;
+    }
+    
+    .main .right {
+        width:77%;
+        margin-left:23%;
+    }
+} 
+
+@media all and (max-width:1108px){
+    .main .sider .menu ul li .menu-item {
+        padding-left:9%;
+    }
+}
+
+@media all and (max-width:991.98px){
+    .main .sider .menu ul li .menu-item .text {
+        font-size: 13px;
+    }
+}
+
+@media all and (max-width:900px){
+    .main .sider .menu ul li .menu-item {
+        padding-left:5%;
+    }
+}
+
+@media all and (max-width:830px){
+    .main .sider .menu ul li .menu-item {
+        padding-left:2%;
+    }
+}
+
+@media all and (max-width:800px){
+    .main .content .header .header-content .current-content-smaller {
+        display: block;
+    }
+    .main .content .header .header-content .current-content-smaller .web-info{
+        display: flex;
+        align-items: center;
+    }
+
+    .main .content .header .header-content .current-content-smaller .web-info .logo-img{
+        height:30px;
+        width:40px;
+    }
+
+    .main .content .header .header-content .current-content-smaller .web-info .logo-img img{
+        height:30px;
+        width:40px;
+    }
+
+    .main .content .header .header-content .current-content-smaller .web-info .navbar {
+        margin-left: 30px;
+        font-size: 20px;
+        color: #90979E;
+    }
+
+    .main .content .header .header-content .current-content-smaller .web-info .navbar:hover{
+        cursor: pointer;
+        color: #7A83F5;
+        transition: 0.5s all ease;
+    }
+
+    .main .content .header .header-content .current-content-smaller .sider-info {
+        background-color: #313A46;
+        border: 1px #90979E solid;
+        border-radius: 5px;
+        top:70px;
+        color: #90979E;
+        position: absolute;
+        display: none;
+    }
+
+    .main .content .header .header-content .current-content-smaller .sider-info.show{
+        display:block;
+    }
+
+    .main .content .header .header-content .current-content-smaller .sider-info ul {
+        list-style-type: none;
+        padding:0;
+        margin:0;
+    }
+
+    .main .content .header .header-content .current-content-smaller .sider-info ul li .menu-item {
+        display: flex;
+        align-items: center;
+        padding:10px 24px;
+        border-bottom: 1px #90979E solid;
+    }
+
+    .main .content .header .header-content .current-content-smaller .sider-info ul li:hover{
+        background-color: #7A83F5;
+        color:#F9FAFD;
+        cursor: pointer;
+        transition: 0.5s all ease;
+    }
+
+    .main .content .header .header-content .current-content-smaller .sider-info ul li:last-child .menu-item{
+        border-bottom: none;
+    }
+
+    .main .content .header .header-content .current-content-smaller .sider-info ul li .menu-item .text {
+        margin-left: 15px;
+    } 
+
+    .main .content .header .header-content .current-content{
+        display: none;
+    }
+    .sider{
+        display: none;
+    }
+
+    .main .right {
+        width:100%;
+        margin-left:0%;
+    }
+
+}
+
+@media (max-width:575.98px){
+    .main .content .header .header-content .current-content-smaller .web-info .logo-img {
+        display:none;
+    }
+
+    .main .content .header .header-content .current-content-smaller .web-info .navbar{
+        margin-left: 0;
+    }
+
+    .main .content .header .header-content .current-content-smaller .sider-info {
+        width:50%;
+    }
+
+    .main .content .header .header-content .menu-content .menu span {
+        font-size: 18px;;
+    }
+
+    .main .content .header .header-content .menu-content .menu .icon-cart .number-cart {
+        width:15px;
+        height:15px;
+    }
+}
+/* End Responsive */
