--- a/assets/css/ChangePassword.css
+++ b/assets/css/ChangePassword.css
@@ -64,7 +64,14 @@
     outline:none;
     padding:10px;
     width:95%;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
+}
+
+.login form input[name="re-password"] {
+    border-radius: 50px;
+    outline:none;
+    padding:10px;
+    width:95%;
 }
 
 .login form .func {
