--- a/assets/css/CheckoutForm.css
+++ b/assets/css/CheckoutForm.css
@@ -74,3 +74,27 @@
     transition: 0.5s all ease;
 }
 /* End Checkout Form */
+
+/* Responsive */
+
+@media all and (max-width:991.98px){
+    .main .content .body .checkout-content {
+        width:50%;
+    }
+}
+
+@media all and (max-width:767.98px){
+    .main .content .body .checkout-content {
+        width:70%;
+    }
+}
+@media (max-width:575.98px){
+    .main .content .body .customer-list table tr td:nth-child(2){
+        display:none;
+    }
+    .main .content .body .customer-list table tr th:nth-child(2){
+        display:none;
+    }
+}
+
+/* End Responsive */
