--- a/assets/css/CheckoutOrderList.css
+++ b/assets/css/CheckoutOrderList.css
@@ -253,3 +253,98 @@
 /* End Table */
 
 /* End Checkout Order List */
+
+/* Resonsive  */
+@media all and (max-width:1199.98px){
+    .main .content .body .body-content .second table tr th {
+        font-size: 14px;
+    }
+
+    .main .content .body .body-content .second table tr td {
+        font-size: 13px;
+    }
+
+    .main .content .body .body-content .second table tr th:nth-child(1) {
+        padding-left: 15px;
+    }
+}
+
+@media all and (max-width:991.98px){
+    .main .content .body .list .order-list table tr th {
+        font-size: 14px;
+    }
+
+    .main .content .body .list .order-list table tr td{
+        font-size: 13px;
+    }
+
+    .main .content .body .list .search-content .search-name form input[name="search"] {
+        width:50%;
+    }
+
+    .main .content .body .list .search-content .search-name form .search-button {
+        flex:0;
+    }
+}
+@media all and (max-width:767.98px){
+    .container {
+        max-width: 720px;
+    }
+
+    .main .content .body .list .search-content {
+        flex-wrap: wrap;
+    }
+}
+
+@media all and (max-width:633px){
+    .main .content .body .list .search-content .search-name {
+        margin-bottom: 10px;
+    }
+
+    .main .content .body .list .search-content .search-name form input[name="search"] {
+        width:100%;
+    }
+
+    .main .content .body .list .search-content .search-name form .search-button {
+        flex:1;
+    }
+
+    .main .content .body .list .search-content .search-barcode form input[name="barcode"]{
+        width:100%;
+    }
+
+    .main .content .body .list .search-content .search-barcode form .search-button {
+        padding-left: 24px;
+        padding-right: 24x;
+    }
+}
+@media (max-width:575.98px){
+    .main .content .body .list .order-list table tr td .product-name .product-info .name {
+        font-size: 13px;
+    }
+
+    .main .content .body .list .order-list table tr td .product-name .product-info .color {
+        font-size: 9px;
+    }
+
+    .main .content .body .list .order-list table tr td .product-name .product-info {
+        margin-left: 10px;
+    }
+
+    .main .content .body .list .order-list table tr td .product-name img {
+        height:30px;
+        width:30px;
+    }
+
+    .main .content .body .list .order-list table tr td .num input[name="quantity"] {
+        padding:0;
+        width:40px;
+    }
+
+    .main .content .body .list .order-list table tr td {
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
+/* End Responsive */
