--- a/assets/css/ProductsList.css
+++ b/assets/css/ProductsList.css
@@ -26,14 +26,6 @@
     padding: 7px 15px;
     box-shadow: 0 2px 6px 0px rgba(251,116,144, .5);
     border: 1px solid #fa5c7c;
-}
-
-.main .content .body .body-content .first .add-account:hover{
-    background-color: #ea6882;
-    transition: 0.5s all ease;
-}
-
-.main .content .body .body-content .first .add-account a{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -41,12 +33,19 @@
     text-decoration: none;
 }
 
-.main .content .body .body-content .first .add-account a span{
+.main .content .body .body-content .first .add-account:hover{
+    background-color: #ea6882;
+    transition: 0.5s all ease;
+    cursor: pointer;
+}
+
+
+.main .content .body .body-content .first .add-account span{
     font-size: 13px;
     margin-right: 10px;
 }
 
-.main .content .body .body-content .first .add-account a .text{
+.main .content .body .body-content .first .add-account .text{
     font-size: 15px;
 }
 
