--- a/assets/css/ProductsList.css
+++ b/assets/css/ProductsList.css
@@ -50,12 +50,12 @@
 }
 
 /* Search Input */
-.main .content .body .body-content .first .search-input form{
+.main .content .body .body-content .first .search-input .form{
     display: flex;
     align-items: center;
 }
 
-.main .content .body .body-content .first .search-input form span {
+.main .content .body .body-content .first .search-input .form span {
     padding:5.8px;
     padding-left:13px;
     border-top-left-radius:5px;
@@ -88,6 +88,7 @@
 .main .content .body .body-content .first .search-input .search-button:hover{
     background-color: #09bf8c;
     transition: 0.5s all ease;
+    cursor: pointer;
 }
 /* End Search Input */
 
